[project]
name = "sensevoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.111.1",
    "funasr>=1.1.3",
    "gradio>=5.49.1",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.35.3",
    "modelscope>=1.31.0",
    "numpy<=1.26.4",
    "torch<=2.3",
    "torchaudio>=2.3.0",
]
