[project]
name = "sensevoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
# without wheel, cuda 12.8 support is required
# see https://pytorch.org/get-started/locally/
dependencies = [
    "fastapi>=0.111.1",
    "funasr>=1.1.3",
    "gradio>=5.49.1",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.35.3",
    "modelscope>=1.31.0",
    "numpy<=1.26.4",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.0",
    "torchvision>=0.24.0",
]
